--- a/default/index.html
+++ b/default/index.html
@@ -16,24 +16,27 @@
             header
         </header>
         <!-- /.header l-header -->
+        <nav class="topNav">
 
-        <div class="main l-main">
-            <div class="contents l-contents">
-                main
-            </div>
-            <!-- /.contents -->
-
-            <aside class="sidebar l-sidebar">
-                sidebar
             </aside>
-            <!-- /.sidebar l-sidebar -->
-        </div>
-        <!-- /.main -->
 
-        <footer class="footer l-footer">
-            footer
-        </footer>
-        <!-- /.footer -->
+            <div class="main l-main">
+                <div class="contents l-contents">
+                    main
+                </div>
+                <!-- /.contents -->
+
+                <aside class="sidebar l-sidebar">
+                    sidebar
+                </aside>
+                <!-- /.sidebar l-sidebar -->
+            </div>
+            <!-- /.main -->
+
+            <footer class="footer l-footer">
+                footer
+            </footer>
+            <!-- /.footer -->
 
     </div>
     <!-- /.wrapper -->
