--- a/default-scss/index.html
+++ b/default-scss/index.html
@@ -10,33 +10,32 @@
 </head>
 
 <body>
-    <div class="wrapper l-wrapper">
 
-        <header class="header l-header">
-            header
-        </header>
-        <!-- /.header l-header -->
+    <header class="header l-header">
+        <p>header</p>
+    </header>
+    <!-- /.header l-header -->
 
-        <div class="main l-main">
-            <div class="contents l-contents">
-                main
-            </div>
-            <!-- /.contents -->
+    <nav class="topNav l-topNav">
+        <p>topNav</p>
+    </nav>
+    <!-- /.topNav -->
 
-            <aside class="sidebar l-sidebar">
-                sidebar
-            </aside>
-            <!-- /.sidebar l-sidebar -->
-        </div>
-        <!-- /.main -->
+    <main class="main l-main">
+        <p>main</p>
+    </main>
+    <!-- /.main l-main -->
 
-        <footer class="footer l-footer">
-            footer
-        </footer>
-        <!-- /.footer -->
+    <aside class="sideBar l-sideBar">
+        <p>sideBar</p>
+    </aside>
+    <!-- /.sideBar l-sideBar -->
 
-    </div>
-    <!-- /.wrapper -->
+    <footer class="footer l-footer">
+        <p>footer</p>
+    </footer>
+    <!-- /.footer -->
+
 </body>
 
 </html>
