--- a/default/index.html
+++ b/default/index.html
@@ -10,36 +10,32 @@
 </head>
 
 <body>
-    <div class="wrapper l-wrapper">
 
-        <header class="header l-header">
-            header
-        </header>
-        <!-- /.header l-header -->
-        <nav class="topNav">
+    <header class="header l-header">
+        <p>header</p>
+    </header>
+    <!-- /.header l-header -->
 
-            </aside>
+    <nav class="topNav l-topNav">
+        <p>topNav</p>
+    </nav>
+    <!-- /.topNav -->
 
-            <div class="main l-main">
-                <div class="contents l-contents">
-                    main
-                </div>
-                <!-- /.contents -->
+    <main class="main l-main">
+        <p>main</p>
+    </main>
+    <!-- /.main l-main -->
 
-                <aside class="sidebar l-sidebar">
-                    sidebar
-                </aside>
-                <!-- /.sidebar l-sidebar -->
-            </div>
-            <!-- /.main -->
+    <aside class="sideBar l-sideBar">
+        <p>sideBar</p>
+    </aside>
+    <!-- /.sideBar l-sideBar -->
 
-            <footer class="footer l-footer">
-                footer
-            </footer>
-            <!-- /.footer -->
+    <footer class="footer l-footer">
+        <p>footer</p>
+    </footer>
+    <!-- /.footer -->
 
-    </div>
-    <!-- /.wrapper -->
 </body>
 
 </html>
