HTML5 Docker CSS Reset追加

--- a/03reset比較/03-04HTML5DoctorCssReset/index.html
+++ b/03reset比較/03-04HTML5DoctorCssReset/index.html
@@ -3,17 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <!-- ↓の#に読み込みたいCSSファイル名を入れて下さい-->
-    <link rel="stylesheet" href="#.css">
-    <title>css デザインなし</title>
-</head>
+    <title>HTML5 Doctor CSS Reset</title>
+    <link rel="stylesheet" href="style.css">
 
-<!-- 
-    リセット系cssをあてないと
-    　
-    ブラウザの周りに余白が空いている
-    見出しなどの全ての要素の上下に余白がある
- -->
+    <!-- 
+        全ての余白が消える（ブラウザの周辺、見出しなどの要素の上下など全て）
+        見出しや太字などの文字サイズはリセットされ全て統一されるが、文字の太さはリセットされない
+        テキストボックスや送信ボタンなどの<input>要素はブラウザ固有のものになる
+    -->
+</head>
 
 <body>
     <h1>見出し１</h1>
