--- a/03reset比較/03-05/index.html
+++ b/03reset比較/03-05/index.html
@@ -3,16 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>EricMayerReset</title>
+    <title>HTML5 Doctor CSS Reset</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
-<!-- 
-    
-    一部のタグがHTML5に対応していないことがあります。
-
-    したがって、次に紹介するHTML5 Doctor CSS Resetを使用する事をオススメします。
- -->
 
 <body>
     <h1>見出し１</h1>
