--- a/05grid/3column/index.html
+++ b/05grid/3column/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>flexbox 2column</title>
+    <title>flexbox 3column</title>
     <link href="sanitize.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css">
 </head>
@@ -24,6 +24,10 @@
     </nav>
     <!-- /.topNav -->
     <div class="l-mainWrapper">
+        <aside class="rightBar l-rightBar">
+            <p>rightBar</p>
+        </aside>
+        <!-- /.rightBar l-rightBar -->
         <main class="main l-main">
             <p>main</p>
         </main>
